Inicia la aplicacion patrimonio georeferenciado de ipiales

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h1>
-  {{title}}
-</h1>
+<div class="Lato">
+  <div>
+    <app-navbar></app-navbar>
+  </div>
+  <div>
+    <app-parallax></app-parallax>
+  </div>
+  <div>
+    <app-footer></app-footer>
+  </div>
+</div>
