--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,9 @@
     <app-parallax></app-parallax>
   </div>
   <div>
+    <app-map></app-map>
+  </div>
+  <div>
     <app-footer></app-footer>
   </div>
 </div>
