se agrego los markers al mapa, algunos puntos de referencia, se agrego slider y parrallx module

--- a/src/app/parallax/parallax.component.html
+++ b/src/app/parallax/parallax.component.html
@@ -2,8 +2,8 @@
   <div class="parallax"><img src="http://lorempixel.com/400/200/sports/"></div>
 </div>
 <div class="parallax-container">
-  <div class="parallax"><img src="http://lorempixel.com/400/200/sports/1/Dummy-Text/"></div>
+  <div class="parallax"><app-slider></app-slider></div>
 </div>
 <div class="parallax-container">
-  <div class="parallax"><img src="http://lorempixel.com/400/200"></div>
+  <div class="parallax"><app-map></app-map></div>
 </div>
