--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,12 +1,18 @@
 <sebm-google-map 
 [latitude]="lat" 
 [longitude]="lng" 
-[zoom]="zoom"
+[zoom]="zoom" 
 [disableDefaultUI]=false 
 [zoomControl]="false" 
 (mapClick)="mapClicked($event)">>
-  <sebm-google-map-marker 
-  [latitude]="lat" 
-  [longitude]="lng">
+  <sebm-google-map-marker *ngFor="let m of markers; let i = index" 
+  (markerClick)="clickedMarker(m, i)" 
+  [latitude]="m.lat" [longitude]="m.lng"
+  [markerDraggable]="m.draggable" 
+  (dragEnd)="markerDragEnd(m, $event)">
+  <sebm-google-map-info-window>
+    <strong>{{m.name}}</strong>
+  </sebm-google-map-info-window>
+
   </sebm-google-map-marker>
 </sebm-google-map>
