Se organizo el archivo app.modules.html, se agregaron imagenes y se agrego css

--- a/src/app/parallax/parallax.component.html
+++ b/src/app/parallax/parallax.component.html
@@ -1,9 +1,71 @@
 <div class="parallax-container">
-  <div class="parallax"><img src="http://lorempixel.com/400/200/sports/"></div>
+  <div class="parallax red darken-1">
+    <div class="caption center-align container">
+      <h2 class="pacifico white-text">Ipiales Capital Del Sur</h2>
+      <h5 class="light white-text text-lighten-3">
+        <p>
+          Ipiales es un municipio colombiano situado en el departamento de Nariño. Se encuentra sobre la frontera con Ecuador; en el
+          Nudo de los Pastos, en el altiplano andino; relativamente cerca de la costa del océano Pacífico, al pie de monte
+          amazónico y a la línea equinoccial; siendo una región panamazónica.
+        </p>
+        <p>
+          La Ciudad y Municipalidad forma parte de la conurbación binacional Tulcán-Ipiales en donde viven 196.630 habitantes, aunque
+          estos datos podrían ser más elevadas ya que la cifra dada para el municipio de Ipiales corresponde al censo 2005
+          y la del cantón de Tulcán del censo 2010. Según estimaciones para el 2012 la población de ambas ciudades aglomeradas
+          es de alrededor de 260 000 de habitantes, y es por tanto el área metropolitana fronteriza más poblada de la frontera
+          ecuatoriana y la segunda más poblada de fronteras colombianas; teniendo Ipiales para el año 2016 una población
+          estimada de 141 863 habitantes aproximadamente según las proyecciones del DANE.
+        </p>
+      </h5>
+    </div>
+  </div>
 </div>
 <div class="parallax-container">
-  <div class="parallax"><app-slider></app-slider></div>
+  <div class="parallax green darken-2">
+    <div class="caption right-align container">
+      <h2 class="pacifico white-text">Historia</h2>
+      <h5 class="light white-text text-lighten-3">
+        <p>
+          En época prehispánica la comarca estaba habitada por el pueblo de los Pastos, quienes resistieron a la invasión de los incas,
+          cuando estos entraron a la región bajo el mando de Huayna Cápac, hacia 1480. La nación de los Pastos, era un conglomerado
+          indígena existente de tiempo inmemorial, que ya tenían fundados sus pueblos. Estaban organizados en cacicazgos,
+          con bohíos circulares en número de cien, "eran agricultores, cazadores, alfareros, orfebres"; creían en la inmortalidad
+          del alma, tenían sus dioses: el Sol, la Luna, el mono, los ríos, lagunas, montañas; y su santuario en el hoy pictógrafo
+          de los Monos en Potosí y su centro astronómico en el petroglifo de Machines en Cumbal. Eran amantes de la Pacha
+          Mama (madre tierra). Los indígenas Pastos, trabajaron con maestría la cerámica, la orfebrería, los tejidos; poseían
+          conocimientos de astrofísica, medicina tradicional, desarrollo endógeno, educación y derecho propio y cosmovisión;
+          legado que nos asombra y demuestra el adelanto cultural de nuestros antepasados.
+        </p>
+        <p>
+          Los primeros europeos en llegar a esta región fueron: Diego de Tapia, luego Pedro de Añasco y Juan de Ampudia en 1535 al
+          río Ancashmayu (Guáytara); Pedro de Puelles en 1537, españoles enviados desde Quito por el adelantado Sebastián
+          de Belalcázar, estos continuaron al centro de lo que sería el Nuevo Reino de Granada; la historia actual considera
+          este episodio como una invasión.
+        </p>
+      </h5>
+    </div>
+  </div>
 </div>
 <div class="parallax-container">
-  <div class="parallax"><app-map></app-map></div>
+  <div class="parallax">
+    <div class="caption left-align container">
+      <h2 class="pacifico ">Ubicación</h2>
+      <h5 class="light text-lighten-3">
+        <p>
+          El territorio del municipio de Ipiales está al suroccidente de Colombia, y del departamento de Nariño, en el altiplano andino
+          de Túquerres e Ipiales. La ciudad se encuentra a 3 km de la frontera colombo-ecuatoriana y a 82 km de Pasto. Se
+          comunica con el interior del país por la carretera Panamericana, la que continúa por la población ecuatoriana de
+          Tulcán, luego de atravesar el puente internacional de Rumichaca, en lengua quechua significa “puente de piedra”,
+          sobre el río Carchi, que en territorio nariñense se denomina Guáytara (río azul) a 800 metros, desde el mirador
+          de Ipiales.
+        </p>
+        <h4 class="pacifico">Limites</h4>
+        <p>
+          Por el norte: con Pupiales, Gualmatán, Contadero y Potosí; por el sur: con la república del Ecuador; por el oriente: con
+          Potosí, Córdoba, Puerres, y el departamento del Putumayo; por el occidente: con Aldana, Cuaspud (Carlosama) y la
+          república del Ecuador.15
+        </p>
+      </h5>
+    </div>
+  </div>
 </div>
