--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,9 @@
     <app-navbar></app-navbar>
   </div>
   <div>
+    <app-slider></app-slider>
+  </div>
+  <div>
     <app-parallax></app-parallax>
   </div>
   <div>
