--- a/src/app/parallax/parallax.component.css
+++ b/src/app/parallax/parallax.component.css
@@ -1,3 +1,6 @@
 .parallax-container {
-      height: 700px;
-    }
+      height: 500px;
+  }
+  .pacifico{
+    font-family: 'Pacifico', cursive;
+}
