--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,21 +2,32 @@
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
-        <h5>Footer Content</h5>
-        <p>You can use rows and columns here to organize your footer content.</p>
+        <h5>Patrimonio georreferenciado de Ipiales</h5>
+        <p>Este es un sitio web donde se georreferencia en el mapa de google los patrimonios culturales de la ciudad de Ipiales.</p>
       </div>
       <div class="col l4 offset-l2 s12">
-        <h5>Links</h5>
+        <h5>Siguenos</h5>
         <ul>
-          <li><a href="#!">Link 1</a></li>
+          <li><a href="#!">Facebook</a></li>
+          <li><a href="#!">Instagran</a></li>
+          <li><a href="#!">Twitter</a></li>
         </ul>
       </div>
     </div>
   </div>
   <div class="footer-copyright">
     <div class="container">
-      © 2014 Copyright Text
-      <a href="#!">More Links</a>
+      <h6 class="black-text">
+        <p>
+          Proyecto desarrollado en las instalaciones Vive Digital de la ciudad de Ipiales en conjunto con Parquesoft Pasto.
+        </p>
+        <p>
+          Realizado por:
+          <br>
+          Andres Mejia, Bayron Polo y Wilson Rosero.
+        </p>
+        <p>Email: <a href="#!">eamejia783@gmail.com</a></p>
+      </h6>
     </div>
   </div>
 </footer>
